# pychat

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
docker/pychat/: Dockerfile
docker/server/: Dockerfile
docker/web/: Dockerfile
server/: Dockerfile  __init__.py  __main__.py  app.py  logging.yaml  logging_config.yaml  requirements.txt
server/chat/: aiohttpapi.py  chat.py
web/: default.conf  package-lock.json  package.json
web/dockerfiles/prod/: Dockerfile
web/public/: index.html
web/src/: App.css  App.js  socket.js
web/src/chat/: Chat.js  Message.js  MessageBlockInput.js  MessageBody.js  MessageHeader.js  MessageInput.js  Messages.js  index.js
