[tool.poetry]
name = "pychat"
version = "0.1.0"
description = ""
authors = ["Danil Akhtarov <daxartio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
